...
interface PasswordInputFieldProps extends Omit<TextInputProps, "secureTextEntry"> {
    value: string;
    onChangeText: (text: string) => void,
    placeholder?: string;
}
    export function PasswordInputField({
    placeholder = "Minimo 8 caracteres",
    value,
    onChangeText,
    ...props 
}: PasswordInputFieldProps) {
    const [showPassword, setShowPassword] = useState(false);

...
