...
      />

      <Text style = {styles.title}>Bem vindo!</Text>
      <Text style = {styles.subtitle}>Toda grande descoberta começou com uma perguntas simples.</Text>

      <PrimaryButton
        title = "Entrar"
        onPress={() => router.push("/auth/login")}
      />

      <PrimaryButton
        title="Cadastrar"
        color="#0055AA"
...
