...
            </View>
        );
    }
    
    return (
        <>
            <AppText style={styles.sectionTitle}>Mais recentes:</AppText>
            {researches.map(research => (
                <ResearchCard 
                    key={research.id} 
                    research={research} 
                    onPress={handleCardPress} 
                />
...
